# binary-greedy-meshing-godot

./: CMakeLists.txt
Codex/: CMakeLists.txt  README.md
Codex/app/: main.cpp
Codex/include/vox/: BinaryGreedyMesher.h  ChunkCodec.h  DDGICascade.h  Generator.h  GodotInterop.h  Light.h  Math.h  Mesh.h  SoftwareRenderer.h  VoxelChunk.h
Codex/reports/: performance_run_2026-03-10.md
Codex/src/: BinaryGreedyMesher.cpp  ChunkCodec.cpp  DDGICascade.cpp  Generator.cpp  GodotInterop.cpp  Light.cpp  Mesh.cpp  SoftwareRenderer.cpp  VoxelChunk.cpp
Codex/tests/: roundtrip_tests.cpp
benchmarks/: BENCHMARK_RESULTS.md  level96_benchmark.cpp  mesher_benchmark.cpp  run_level96_benchmark.sh  run_mesher_benchmark.sh
godot_extension/: CMakeLists.txt  README.md
godot_extension/godot/: binary_menu_extension.gdextension  project.godot
godot_extension/godot/scenes/: main_menu.tscn
godot_extension/godot/scripts/: main_menu.gd
godot_extension/src/: binary_mesher_gdextension.cpp  binary_mesher_gdextension.h  register_types.cpp  register_types.h
